Fix favourites, fix scrollbar and fix card (now progress bar fixed on the bottom)

--- a/src/assets/cards.scss
+++ b/src/assets/cards.scss
@@ -15,8 +15,22 @@
   }
 }
 
-.status-tag-wrapper,
-.top-wrapper {
+.card-top,
+.card-bottom {
+  height: 50%;
+}
+
+.card-bottom {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+
+  .status-tag-wrapper,
+  .top-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .status-tag-wrapper {
+    margin-top: auto;
+  }
 }
